recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:16: error: not found: value snowSlide
    snowSlide(levels-1,length/3) ; gauche(60)
    ^Koch:17: error: not found: value snowSlide
    snowSlide(levels-1,length/3) ; droite(120)
    ^Koch:18: error: not found: value snowSlide
    snowSlide(levels-1,length/3) ; gauche(60)
    ^Koch:19: error: not found: value snowSlide
    snowSlide(levels-1,length/3)
    ^